# wordle

./: .gitignore
server/: CMakeLists.txt
server/src/: game.cpp  game.hpp  main.cpp  wordle.hpp  wordle_database.hpp  wordle_server.hpp
server/src/test/: wordle_tests.cpp
server/utils/: create_wordle_header.py
